# QCGProjectUKCompany

./: .env  .env.example  .replit  API_CRUD_GUIDE.md  COMPLETE_THUNDER_GUIDE.md  DEVELOPER_GUIDE.md  FILE_LOCATIONS.md  FINAL_WINDOWS_FIX.bat  LOCAL_SETUP_GUIDE.md  OLLAMA_SETUP.md  PYTHON_TYPESCRIPT_SETUP.md  QUICK_FIX_GUIDE.md  README.md  SETUP_COMPLETE.md  SIMPLE_FIX_INSTRUCTIONS.md  STATIC_DEPLOYMENT_GUIDE.md  TEST_API_EXAMPLES.md  THUNDER_CLIENT_API_GUIDE.md  THUNDER_CLIENT_STEP_BY_STEP.md  WINDOWS_CSS_FIX.md  WINDOWS_FIX_DATABASE.md  WINDOWS_FIX_PACKAGE.md  WINDOWS_LOCAL_SETUP.md  WINDOWS_QUICK_START.md  api_response.json  complete_websocket_fix.ps1  create_database.sql  debug_websocket_sources.bat  diagnose_api_errors.bat  eliminate_websockets.bat  final_fix_websockets.bat  find_websocket_source.bat  fix_api_500_errors.bat  fix_windows_websocket.ps1  init_database.py  instant_websocket_fix.md  nuclear_websocket_fix.bat  package-lock.json  package.json  pyproject.toml  (+21 more)
attached_assets/: Pasted--npm-install-save-dev-cross-env-added-1-package-and-audited-561-packages-in-2s-69-packages--1750243441035_1750243441037.txt  Pasted--rest-express-1-0-0-dev-cross-env-NODE-ENV-development-tsx-server-index-ts-node-exe-Error-1750246060810_1750246060811.txt  Pasted-PS-C-new-qcg2-Qualification-Course-Generator-QCG-npm-run-dev-rest-express-1-0-0-dev--1750247151233_1750247151234.txt  Pasted-npm-run-dev-rest-express-1-0-0-dev-cross-env-NODE-ENV-development-tsx-server-index-ts--1750238037613_1750238037614.txt  (+2 more)
client/: index.html
python_backend/: .env  .env.example  README.md  app.py  (+12 more)
(+192 files in other folders)
